# Cipher

./: CMakeLists.txt  README.md  input.txt
include/: Cipher.h  JenkinsHash.h  LCG.h  Speck.h
src/: JenkinsHash.cpp  LCG.cpp  Speck.cpp  hash_main.cpp  lcg_main.cpp  speck_main.cpp
test/: lcg_tests.cc  speck_tests.cc
